--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 regex = "1.5.3"
+clap = "2.33.3"
+anyhow = "1.0.40"
+thiserror = "1.0.24"
+beau_collector = "0.2.1"
